--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="LandingPage.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width :460px)" href="phone.css">
     <script src="https://kit.fontawesome.com/a070b57717.js" crossorigin="anonymous"></script>
     <title>Ecommerce Website</title>
